--- a/_output.yml
+++ b/_output.yml
@@ -4,10 +4,10 @@ bookdown::gitbook:
     toc:
       before: |
         <li><a href="./">초지 및 사료작물학</a></li>
-#    download: ["pdf", "epub"]
-#bookdown::pdf_book:
-#  includes:
-#    in_header: preamble.tex
-#  latex_engine: xelatex
-#  citation_package: natbib
-#  keep_tex: yes
+    download: ["pdf", "epub"]
+bookdown::pdf_book:
+  includes:
+    in_header: preamble.tex
+  latex_engine: xelatex
+  citation_package: natbib
+  keep_tex: yes
